--- a/Supermarket.API.csproj
+++ b/Supermarket.API.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Domain\Services\IProductService.cs" />
+  </ItemGroup>
+
 </Project>
