new database branch

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings":{
+    "DefaultConnection":"server=localhost;userid=root;password=Saruman1;database=sql_store;"
+  },
   "AllowedHosts": "*"
 }
