--- a/Supermarket.API.csproj
+++ b/Supermarket.API.csproj
@@ -8,19 +8,42 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.6">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.25" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.3.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\supermarketApiTests\CategoriesControllerTests.cs">
-      <Link>supermarketApiTests\CategoriesControllerTests.cs</Link>
-    </Compile>
+    <Compile Remove="Domain\Models\EUnitOfMeasurement.cs" />
+    <Compile Remove="WeatherForecast.cs" />
+    <Compile Remove="Domain\Repositories\ICategoryRepository.cs" />
+    <Compile Remove="Domain\Services\ICategoryService.cs" />
+    <Compile Remove="Domain\Services\Communication\CategoryResponse.cs" />
+    <Compile Remove="Domain\Models\Product_temp.cs" />
+    <Compile Remove="Models\**" />
+    <Compile Remove="Controllers\CategoriesController.cs" />
+    <Compile Remove="Services\CategoryService.cs" />
+    <Compile Remove="Resources\SaveCategoryResource.cs" />
+    <Compile Remove="Domain\Models\Category.cs" />
+    <Compile Remove="Persistence\Contexts\AppDbContext.cs" />
+    <Compile Remove="Persistence\Repositories\CategoryRepository.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -147,6 +170,7 @@
     <Content Include="..\supermarketApiTests\SupermarketApiTests.sln">
       <Link>supermarketApiTests\SupermarketApiTests.sln</Link>
     </Content>
+    <Content Remove="Models\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -162,6 +186,14 @@
     <Folder Include="..\supermarketApiTests\.git\refs\tags">
       <Link>supermarketApiTests\.git\refs\tags</Link>
     </Folder>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="Models\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Models\**" />
   </ItemGroup>
 
 </Project>
