--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings":{
-    "DefaultConnection":"server=localhost;userid=root;password=Saruman1;database=sql_store;"
+    "DefaultConnection":"server=localhost;port=3306;user=root;database=sql_store"
   },
   "AllowedHosts": "*"
 }
