--- a/Supermarket.API.csproj
+++ b/Supermarket.API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <GenerateProgramFile>false</GenerateProgramFile>
-</PropertyGroup>
+  <UserSecretsId>7eae9096-75b8-49cb-8a52-42980edf363e</UserSecretsId>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
@@ -40,10 +41,9 @@
     <Compile Remove="Models\**" />
     <Compile Remove="Controllers\CategoriesController.cs" />
     <Compile Remove="Services\CategoryService.cs" />
-    <Compile Remove="Resources\SaveCategoryResource.cs" />
     <Compile Remove="Domain\Models\Category.cs" />
-    <Compile Remove="Persistence\Contexts\AppDbContext.cs" />
     <Compile Remove="Persistence\Repositories\CategoryRepository.cs" />
+    <Compile Remove="Persistence\Contexts\AppDbContext.cs" />
   </ItemGroup>
 
   <ItemGroup>
